--- a/myapp/.gitignore
+++ b/myapp/.gitignore
@@ -25,6 +25,7 @@ override.tf.json
 
 # Ignore transient lock info files created by terraform apply
 .terraform.tfstate.lock.info
+.terraform.lock.hcl
 
 .terraformrc
 terraform.rc
