--- a/myapp/requirements.txt
+++ b/myapp/requirements.txt
@@ -1,2 +1,7 @@
 Flask==3.1.1
+gunicorn
+
 google-cloud-firestore==2.21.0
+google-cloud-monitoring==2.28.0
+google-cloud-pubsub==2.23.0
+protobuf>=4.21.0
