--- a/myapp/requirements.txt
+++ b/myapp/requirements.txt
@@ -5,3 +5,9 @@ google-cloud-firestore==2.21.0
 google-cloud-monitoring==2.28.0
 google-cloud-pubsub==2.23.0
 protobuf>=4.21.0
+
+
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-auth-oauthlib
